--- a/index.html
+++ b/index.html
@@ -17,7 +17,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div id="navbar-container"></div>
+    <header class="navbar">
+        <div class="container">
+            <div class="logo-container">
+                <img src="https://i.postimg.cc/hvPTCz7M/Student-support.png" alt="Student Support Logo" class="navbar-logo">
+                <img src="https://i.postimg.cc/Pp2MR1tn/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
+                <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" class="navbar-logo">
+            </div>
+            <button class="hamburger" aria-label="Toggle menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <nav class="nav-menu">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Layanan</a></li>
+                    <li><a href="#booking">Pendaftaran Layanan</a></li>
+                    <li><a href="#resources">Konselor</a></li>
+                    <li><a href="/html/students/studentview.html">Status Pendaftaran</a></li>
+                    <li><a href="#contact">Kontak</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <section id="home" class="hero">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
