--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -38,7 +38,30 @@
     </style>
 </head>
 <body>
-    <div id="navbar-container"></div>
+    <header class="navbar">
+        <div class="container">
+            <div class="logo-container">
+                <img src="https://i.postimg.cc/hvPTCz7M/Student-support.png" alt="Student Support Logo" class="navbar-logo">
+                <img src="https://i.postimg.cc/Pp2MR1tn/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
+                <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" class="navbar-logo">
+            </div>
+            <button class="hamburger" aria-label="Toggle menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <nav class="nav-menu">
+                <ul>
+                    <li><a href="/index.html#home">Home</a></li>
+                    <li><a href="/index.html#services">Layanan</a></li>
+                    <li><a href="/index.html#booking">Pendaftaran Layanan</a></li>
+                    <li><a href="/index.html#resources">Konselor</a></li>
+                    <li><a href="/html/students/studentview.html">Status Pendaftaran</a></li>
+                    <li><a href="/index.html#contact">Kontak</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <section class="consultation-form">
         <div class="container py-9">
