--- a/index.html
+++ b/index.html
@@ -42,52 +42,18 @@
             </nav>
         </div>
     </header>
-
-    <!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <div class="numbertext">1 / 3</div>
-      <img src="images/homeCarousel/Banner1.jpeg" style="width:100%; height: 100%">
-      <div class="text">Caption Text</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">2 / 3</div>
-      <img src="images/homeCarousel/Banner2.webp" style="width:100%">
-      <div class="text">Caption Two</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <div class="numbertext">3 / 3</div>
-      <img src="images/homeCarousel/Banner3.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
-    </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The dots/circles -->
-  
-
-    <section id="home" class="hero">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block" src="images/homeCarousel/slide1.jpg" alt="First slide">
+                    <a href="html/auth/login.html"><img class="d-block" src="#" alt="First slide"></a>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" src="images/homeCarousel/slide2.jpg" alt="Second slide">
+                    <img class="d-block" src="#" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" src="images/homeCarousel/slide4.jpg" alt="Third slide">
+                    <img class="d-block" src="#" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" src="images/homeCarousel/slide3.jpg" alt="Third slide">
+                    <img class="d-block" src="#" alt="Third slide">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
