--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -132,6 +132,7 @@
         });
     </script>
     <script src="../../js/auth.js"></script>
+    <script src="../../script.js"></script>
     <script src="../../js/studentview.js"></script>
 </body>
 </html>
