--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -23,12 +23,12 @@
             </button>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="/index.html#home">Home</a></li>
-                    <li><a href="/index.html#services">Layanan</a></li>
-                    <li><a href="/index.html#booking">Pendaftaran Layanan</a></li>
-                    <li><a href="/index.html#resources">Konselor</a></li>
-                    <li><a href="/html/students/studentview.html">Status Pendaftaran</a></li>
-                    <li><a href="/index.html#contact">Kontak</a></li>
+                    <a href="../../index.html#home">Home</a></li>
+                    <li><a href="../../index.html#services">Layanan</a></li>
+                    <li><a href="../../index.html#booking">Pendaftaran Layanan</a></li>
+                    <li><a href="../../index.html#resources">Konselor</a></li>
+                    <li><a href="../../html/students/studentview.html">Status Pendaftaran</a></li>
+                    <li><a href="../../index.html#contact">Kontak</a></li>
                 </ul>
             </nav>
         </div>
