--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -9,30 +9,7 @@
     <link rel="stylesheet" href="../../css/global.css">
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-container">
-                <img src="https://i.postimg.cc/hvPTCz7M/Student-support.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="https://i.postimg.cc/Pp2MR1tn/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-                <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" class="navbar-logo">
-            </div>
-            <button class="hamburger" aria-label="Toggle menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <nav class="nav-menu">
-                <ul>
-                    <a href="../../index.html#home">Home</a></li>
-                    <li><a href="../../index.html#services">Layanan</a></li>
-                    <li><a href="../../index.html#booking">Pendaftaran Layanan</a></li>
-                    <li><a href="../../index.html#resources">Konselor</a></li>
-                    <li><a href="../../html/students/studentview.html">Status Pendaftaran</a></li>
-                    <li><a href="../../index.html#contact">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="navbar-container"></div>
 
     <section class="consultation-form">
         <div class="container">
