--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
             <h2>Konselor Kami</h2>
             <div class="resource-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; padding: 1rem;">
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="images/counselor/Coun1.jpg" alt="Counselor 1" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://i.postimg.cc/S2nL2pr5/Coun1.jpg" alt="Counselor 1" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Fiona Valentina Damanik</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="images/counselor/Coun2.jpg" alt="Counselor 2" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://i.postimg.cc/9r5PMKq8/Coun2.jpg" alt="Counselor 2" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Yanuar Lurisa Aldio</h3>
                     <p style="color: var(--text-secondary);">S.PSI</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="images/counselor/Coun3.jpg" alt="Counselor 3" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://i.postimg.cc/svYYZmYV/Coun3.jpg" alt="Counselor 3" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Ignatia Ria Natalia</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="images/counselor/Coun4.jpg" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://i.postimg.cc/68BdVZcC/Coun4.jpg" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Sonny Tirta Luzanil</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
