--- a/html/auth/register.html
+++ b/html/auth/register.html
@@ -33,7 +33,7 @@
                     <button type="submit" class="cta-button">Daftar</button>
                 </div>
                 <div class="form-info" style="text-align: center; margin-top: 1rem;">
-                    <p>Sudah punya akun? <a href="login.html" style="color: var(--accent-color); text-decoration: none;">Login disini</a></p>
+                    <p>Sudah punya akun? <a href="../auth/login.html" style="color: var(--accent-color); text-decoration: none;">Login disini</a></p>
                 </div>
             </form>
         </div>
