--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://i.postimg.cc/68BdVZcC/Coun4.jpg" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://i.postimg.cc/wjm0pcs4/Coun4.jpg" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Sonny Tirta Luzanil</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
