--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="logo-container">
                 <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="https://i.postimg.cc/Pp2MR1tn/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
+                <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
                 <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" class="navbar-logo">
             </div>
             <button class="hamburger" aria-label="Toggle menu">
