--- a/html/admin/DaftarRiwayat.html
+++ b/html/admin/DaftarRiwayat.html
@@ -112,3 +112,10 @@
             }); 
         });
 </script>
+<script>
+    function logout(e) {
+            e.preventDefault();
+            localStorage.removeItem('currentUser');
+            window.location.href = '../html/auth.login.html';
+        }
+</script>
