--- a/html/admin/UpdateRiwayat.html
+++ b/html/admin/UpdateRiwayat.html
@@ -79,5 +79,12 @@
     <script src="../../script.js"></script>
     <script src="../../js/auth.js"></script>
     <script src="../../js/updateRiwayat.js"></script>
+    <script>
+        function logout(e) {
+            e.preventDefault();
+            localStorage.removeItem('currentUser');
+            window.location.href = '../html/auth.login.html';
+        }
+    </script>
 </body>
 </html>
