--- a/html/admin/layanan.html
+++ b/html/admin/layanan.html
@@ -146,5 +146,12 @@
     </script>
     <script src="../../js/auth.js"></script>
     <script src="../../js/daftarRiwayat.js"></script>
+    <script>
+        function logout(e) {
+            e.preventDefault();
+            localStorage.removeItem('currentUser');
+            window.location.href = '../html/auth.login.html';
+        }
+    </script>
 </body>
 </html>
