--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../../css/global.css">
 </head>
 <body>
+    
     <div id="navbar-container"></div>
+
 
     <section class="consultation-form">
         <div class="container">
@@ -75,6 +77,7 @@
                     <textarea placeholder="Ceritakan secara singkat masalah yang ingin Anda konsultasikan" rows="6" required></textarea>
                     <textarea placeholder="Harapan atau tujuan yang ingin dicapai dari konsultasi ini" rows="4" required></textarea>
                 </div>
+                <a href=""></a>
 
                 <button type="submit" class="submit-button">Kirim Formulir</button>
             </form>
@@ -88,6 +91,7 @@
     </footer>
 
     <script>
+        requireLogin();
         // Load navbar
         fetch('../components/navbar.html')
             .then(response => response.text())
@@ -125,7 +129,7 @@
 
        </script>
     <script src="../../js/auth.js"></script>
-    <script src="../script.js"></script>
+    <script src="../../script.js"></script>
     <script>
         function logout(e) {
             e.preventDefault();
