--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     
+    
     <div id="navbar-container"></div>
 
 
@@ -77,7 +78,6 @@
                     <textarea placeholder="Ceritakan secara singkat masalah yang ingin Anda konsultasikan" rows="6" required></textarea>
                     <textarea placeholder="Harapan atau tujuan yang ingin dicapai dari konsultasi ini" rows="4" required></textarea>
                 </div>
-                <a href=""></a>
 
                 <button type="submit" class="submit-button">Kirim Formulir</button>
             </form>
@@ -91,7 +91,6 @@
     </footer>
 
     <script>
-        requireLogin();
         // Load navbar
         fetch('../components/navbar.html')
             .then(response => response.text())
@@ -136,6 +135,9 @@
             localStorage.removeItem('currentUser');
             window.location.href = '../html/auth.login.html';
         }
+    </script>
+    <script>
+        requireLogin()
     </script>
 </body>
 </html>
