--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="../../css/global.css">
 </head>
+<script>
+    requireLogin();
+</script>
 <body>
-    
     
     <div id="navbar-container"></div>
 
@@ -135,9 +137,6 @@
             localStorage.removeItem('currentUser');
             window.location.href = '../html/auth.login.html';
         }
-    </script>
-    <script>
-        requireLogin()
     </script>
 </body>
 </html>
