--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -7,10 +7,11 @@
     <title>Formulir Konsultasi - Student Support UMN</title>
     <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="../../css/global.css">
+    <script src="../../js/auth.js"></script>
+    <script>
+        requireLogin();
+    </script>
 </head>
-<script>
-    requireLogin();
-</script>
 <body>
     
     <div id="navbar-container"></div>
