--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -7,7 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../css/global.css">
     <link rel="stylesheet" href="../../css/navbar.css">
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles.css"><script src="../../js/auth.js"></script>
+    <script>
+        requireLogin();
+    </script>
 
     <style>
         .status-card {
@@ -37,9 +40,6 @@
         }
     </style>
 </head>
-<script>
-    requireLogin();
-</script>
 <body>
     <div id="navbar-container"></div>
 
