--- a/index.html
+++ b/index.html
@@ -42,18 +42,26 @@
             </nav>
         </div>
     </header>
+    <section id="home">
+        <div id="carouselExampleIndicators" class="carousel slide slideshow-container" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="html/auth/login.html"><img class="d-block" src="#" alt="First slide"></a>
+                    <a href="html/auth/login.html"><img class="d-block w-100" src="images/homeCarousel/Banner1.jpeg" alt="First slide"></a>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" src="#" alt="Second slide">
+                    <img class="d-block w-100" src="images/homeCarousel/Banner2.webp" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" src="#" alt="Third slide">
+                    <img class="d-block w-100" src="images/homeCarousel/Banner3.jpg" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block" src="#" alt="Third slide">
+                    <img class="d-block w-100" src="images/homeCarousel/Banner1.jpeg" alt="Fourth slide">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
