--- a/index.html
+++ b/index.html
@@ -18,30 +18,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-container">
-                <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
-                <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp"     alt="unggul logo" class="navbar-logo">
+    <div id="navbar-container">
+        <header class="navbar">
+            <div class="container">
+                <div class="logo-container">
+                    <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
+                    <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
+                    <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" alt="unggul logo" class="navbar-logo">
+                </div>
+                <button class="hamburger" aria-label="Toggle menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </button>
+                <nav class="nav-menu">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Layanan</a></li>
+                        <li><a href="#booking">Pendaftaran Layanan</a></li>
+                        <li><a href="#resources">Konselor</a></li>
+                        <li><a href="html/students/studentview.html">Status Pendaftaran</a></li>
+                        <li><a href="#contact">Kontak</a></li>
+                    </ul>
+                </nav>
             </div>
-            <button class="hamburger" aria-label="Toggle menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Layanan</a></li>
-                    <li><a href="#booking">Pendaftaran Layanan</a></li>
-                    <li><a href="#resources">Konselor</a></li>
-                    <li><a href="html/students/studentview.html">Status Pendaftaran</a></li>
-                    <li><a href="#contact">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+        </header>
+    </div>
     <section id="home">
         <div id="carouselExampleIndicators" class="carousel slide slideshow-container" data-bs-ride="carousel">
             <div class="carousel-indicators">
