--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-    <div id="navbar-container">
+<body style="padding-top: 80px;">
+    <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);">
         <header class="navbar">
             <div class="container">
                 <div class="logo-container">
