--- a/html/auth/login.html
+++ b/html/auth/login.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../../css/navbar.css">
     <link rel="stylesheet" href="../../styles.css">
 </head>
-<body>
-    <div id="navbar-container"></div>
+<body style="padding-top: 80px;">
+    <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);"></div>
 
     <section class="login-form">
         <div class="container">
