--- a/html/auth/register.html
+++ b/html/auth/register.html
@@ -7,8 +7,8 @@
     <title>Register - Student Support UMN</title>
     <link rel="stylesheet" href="../../styles.css">
 </head>
-<body>
-    <div id="navbar-container"></div>
+<body style="padding-top: 80px;">
+    <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);"></div>
 
     <section class="register-form">
         <div class="container">
