--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -40,8 +40,8 @@
         }
     </style>
 </head>
-<body>
-    <div id="navbar-container"></div>
+<body style="padding-top: 80px;">
+    <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);"></div>
 
     <section class="consultation-form">
         <div class="container py-9">
