--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -14,9 +14,9 @@
         }
     </script>
 </head>
-<body>
+<body style="padding-top: 80px;">
     
-    <div id="navbar-container"></div>
+    <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);"></div>
 
 
     <section class="consultation-form">
