--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body style="padding-top: 80px;">
-    <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);">
-        <header class="navbar">
+        <header class="navbar" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);">
             <div class="container">
                 <div class="logo-container">
                     <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
