--- a/html/auth/login.html
+++ b/html/auth/login.html
@@ -15,11 +15,12 @@
 
     <section class="login-form">
         <div class="container">
-            <h2>Login Student Support</h2>
+            <h2 style="text-align: center; font-weight: bold;">Login Student Support untuk Student</h2>
             <form id="login-form" class="booking-form">
                 <div class="form-group">
-                    <input type="email" placeholder="Email UMN" required>
-                    <input type="password" placeholder="Password" required>
+                    
+                    <input type="email" placeholder="Email UMN" required style="width: 100%;">
+                    <input type="password" placeholder="Password"style="width: 100%;" required>
                     <button type="submit" class="cta-button">Login</button>
                 </div>
                 <div class="form-info" style="text-align: center; margin-top: 1rem;">
