--- a/html/auth/login.html
+++ b/html/auth/login.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="../../css/navbar.css">
     <link rel="stylesheet" href="../../styles.css">
 </head>
-<body style="padding-top: 80px;">
+<body>
     <div id="navbar-container" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);"></div>
 
-    <section class="login-form">
-        <div class="container">
-            <h2 style="text-align: center; font-weight: bold;">Login Student Support untuk Student</h2>
+    <section class="login-form" style="background-image: url('../../images/background/login.webp'); background-size: cover;">
+        <div class="container" style="">
+            <h2 style="text-align: center; font-weight: bold; color: whitesmoke;">Login Student Support untuk Student</h2>
             <form id="login-form" class="booking-form">
                 <div class="form-group">
                     
