--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h2>Konselor Kami</h2>
             <div class="resource-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; padding: 1rem;">
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://i.postimg.cc/MTD9L6jW/Coun1.jpg" alt="Counselor 1" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/KFoP5lo4TqlwC?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQwNTQsImZpbGVTbHVnIjoiS0ZvUDVsbzRUcWx3QyJ9.ojb6iYfRIeh4Q2AfEiIYLwfIngljmx1Y2FaJZJIqalY" alt="Counselor 1" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Fiona Valentina Damanik</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
