--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <header class="navbar" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);">
             <div class="container">
                 <div class="logo-container">
-                    <img src="https://i.postimg.cc/c1DSgZ5y/Student-Suppot-Logo.png" alt="Student Support Logo" class="navbar-logo">
-                    <img src="https://i.postimg.cc/9Fsw9N1L/umn.png" alt="UMN Logo" class="navbar-logo">
-                    <img src="https://i.postimg.cc/WzX6j6PQ/qs-unggul2-1-1.webp" alt="unggul logo" class="navbar-logo">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQzOTQsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.shbRoQtW1z8Zv67k96x3HSLjtLruIG5EC0sw8SXV7Lc" alt="Student Support Logo" class="navbar-logo">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0NTEsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.yB0qWLJZc11xSxVmyOVSnuunmn76sqfY-5Sh7rXF78Y" alt="UMN Logo" class="navbar-logo">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/jYmNd2YnrqYXU?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0ODMsImZpbGVTbHVnIjoialltTmQyWW5ycVlYVSJ9.sz1DJZbKXZ6bLFeucZBkwbTMneo0-RrsqHawJ7iXTuc" alt="unggul logo" class="navbar-logo">
                 </div>
                 <button class="hamburger" aria-label="Toggle menu">
                     <span class="bar"></span>
@@ -118,17 +118,17 @@
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://i.postimg.cc/wT3wWdxp/Coun2.jpg" alt="Counselor 2" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/zhmh4KYmyI5UK?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQxNDMsImZpbGVTbHVnIjoiemhtaDRLWW15STVVSyJ9.YILKYs-qdHjI5wjkxdhJ1f0hiUDcCTVIcfC6OonoVRE" alt="Counselor 2" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Yanuar Lurisa Aldio</h3>
                     <p style="color: var(--text-secondary);">S.PSI</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://i.postimg.cc/FsqD8n1J/Coun3.jpg" alt="Counselor 3" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/RqQq395SslKP9?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQxNjIsImZpbGVTbHVnIjoiUnFRcTM5NVNzbEtQOSJ9.3rljwB63jRUhNx1h328RRdEhNQcgHeIwdsd7rTlPnaw" alt="Counselor 3" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Ignatia Ria Natalia</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://i.postimg.cc/wjm0pcs4/Coun4.jpg" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/99LKIKYbZO7g8?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQxNzYsImZpbGVTbHVnIjoiOTlMS0lLWWJaTzdnOCJ9.yEaA8SN64LS0XvXWG8sa4qHIa01HO3J0lWUBBAkZEGY" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Sonny Tirta Luzanil</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
