--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon"  href="https://i.postimg.cc/hvPTCz7M/Student-support.png" type="image/png"> 
+    <link rel="icon"  href="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ1ODAsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.ZeBenB3QbipRgSvH2jnnQre5gWPDNL5E89B_eOUug4w" type="image/png"> 
     <title>Student Support Universitas Multimedia Nusantara</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
