--- a/html/admin/UpdateRiwayat.html
+++ b/html/admin/UpdateRiwayat.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 p-3 text-center">
-                <img src="https://i.postimg.cc/9Fsw-9N1L/umn.png" style="max-height: 80px;" alt="UMN Logo" class="logo">
+                <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ2NTAsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.H5KZhzDK25e7P62TJEKlXdgruyOXoeQ7vtfPw4twGks" style="max-height: 80px;" alt="UMN Logo" class="logo">
             </div>
         </div>
 
@@ -28,8 +28,22 @@
             </div>
         </div>
 
-        <div id="searchResults" class="accordion">
-            <!-- Search results will be dynamically populated here -->
+        <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>NIM</th>
+                        <th>Name</th>
+                        <th>Date Requested</th>
+                        <th>Type</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="consultationTable">
+                    <!-- Table content will be dynamically populated here -->
+                </tbody>
+            </table>
         </div>
     </div>
     </section>
