--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <img class="d-block w-100" src="images/homeCarousel/Banner3.jpg" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/Banner1.jpeg" alt="Fourth slide">
+                    <img class="d-block w-100" src="images/homeCarousel/Banner4.png" alt="Fourth slide">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
