--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ1ODAsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.ZeBenB3QbipRgSvH2jnnQre5gWPDNL5E89B_eOUug4w" type="image/png"> 
     <title>Formulir Konsultasi - Student Support UMN</title>
     <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../css/booking.css">
     <link rel="stylesheet" href="../../css/global.css">
     <script src="../../js/auth.js"></script>
     <script>
@@ -34,18 +35,11 @@
             <form id="consultation-form" class="booking-form">
                 <div class="form-group">
                     <h4>Data Pribadi</h4>
-                    <input type="text" placeholder="Nama Lengkap" required>
-                    <input type="text" placeholder="NIM" required>
-                    <input type="email" placeholder="Email UMN" required>
-                    <input type="tel" placeholder="Nomor Telepon" required>
-                    <select name="prodi" required>
-                        <option value="">Pilih Program Studi</option>
-                        <option value="informatika">Informatika</option>
-                        <option value="sistem_informasi">Sistem Informasi</option>
-                        <option value="teknik_komputer">Teknik Komputer</option>
-                        <option value="teknik_elektro">Teknik Elektro</option>
-                        <option value="teknik_fisika">Teknik Fisika</option>
-                    </select>
+                    <input type="text" placeholder="Nama Lengkap" required disabled>
+                    <input type="text" placeholder="NIM" required disabled>
+                    <input type="email" placeholder="Email UMN" required disabled>
+                    <input type="tel" placeholder="Nomor Telepon" required disabled>
+                    
                 </div>
 
                 <div class="form-group">
@@ -81,6 +75,10 @@
                 <div class="form-group">
                     <h4>Deskripsi Masalah</h4>
                     <textarea placeholder="Ceritakan secara singkat masalah yang ingin Anda konsultasikan" rows="6" required></textarea>
+                </div>
+
+                <div class="form-group">
+                    <h4>Harapan dan Tujuan</h4>
                     <textarea placeholder="Harapan atau tujuan yang ingin dicapai dari konsultasi ini" rows="4" required></textarea>
                 </div>
 
