--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/homeCarousel/Banner3.jpg" alt="Third slide">
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item position-relative">
                     <a href="html/auth/login.html"><img class="d-block w-100" src="images/homeCarousel/Banner4.png" alt="Fourth slide"></a>
+                    <div class="position-absolute top-50 start-50 translate-middle">
+                        <a href="html/auth/login.html" class="btn btn-primary btn-lg">Isi Formulir</a>
+                    </div>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
