--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -17,7 +17,7 @@
 </head>
 <body style="padding-top: 80px;">
     
-    <div id="navbar-container" style="position: fixed; top: 0; width: 100%;  background: var(--bg-primary);"></div>
+    <div id="navbar-container"></div>
 
 
     <section class="consultation-form">
