--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="../../css/booking.css">
     <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="../../css/navbar.css">
     <script src="../../js/auth.js"></script>
     <script>
         if (!isLoggedIn()) {
