--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <a href="html/auth/login.html"><img class="d-block w-100" src="images/homeCarousel/Banner1.jpeg" alt="First slide"></a>
-                    <a href="html/auth/login.html" class="btn btn-primary" style="position: absolute; bottom: 20px; right: 20px; padding: 10px 20px; font-weight: bold; border-radius: 25px; background-color: #FFFFFF; color: #1b3b6f; text-decoration: none; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">Butuh Bantuan?</a>
+                    <a href="html/auth/login.html" class="btn btn-primary" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%); padding: 10px 20px; font-weight: bold; border-radius: 25px; background-color: #FFFFFF; color: #1b3b6f; text-decoration: none; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">Butuh Bantuan?</a>
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="images/homeCarousel/Banner2.webp" alt="Second slide">
