--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon"  href="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ1ODAsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.ZeBenB3QbipRgSvH2jnnQre5gWPDNL5E89B_eOUug4w" type="image/png"> 
+    <link rel="icon"  href="https://raw.githubusercontent.com/BakiTacos/image-host/refs/heads/main/StudKudeta/Student%20Support.webp" type="image/png"> 
     <title>Student Support Universitas Multimedia Nusantara</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
@@ -21,9 +21,9 @@
         <header class="navbar" style="position: fixed; top: 0; width: 100%; z-index: 1000; background: var(--bg-primary);">
             <div class="container">
                 <div class="logo-container">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQzOTQsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.shbRoQtW1z8Zv67k96x3HSLjtLruIG5EC0sw8SXV7Lc" alt="Student Support Logo" class="navbar-logo">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0NTEsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.yB0qWLJZc11xSxVmyOVSnuunmn76sqfY-5Sh7rXF78Y" alt="UMN Logo" class="navbar-logo">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/jYmNd2YnrqYXU?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ0ODMsImZpbGVTbHVnIjoialltTmQyWW5ycVlYVSJ9.sz1DJZbKXZ6bLFeucZBkwbTMneo0-RrsqHawJ7iXTuc" alt="unggul logo" class="navbar-logo">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Student%20Suppot%20Logo.png?raw=true" alt="Student Support Logo" class="navbar-logo">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Logo%20UMN.png?raw=true" alt="UMN Logo" class="navbar-logo">
+                    <img src="https://raw.githubusercontent.com/BakiTacos/image-host/refs/heads/main/StudKudeta/Unggul.webp" alt="unggul logo" class="navbar-logo">
                 </div>
                 <button class="hamburger" aria-label="Toggle menu">
                     <span class="bar"></span>
@@ -114,22 +114,22 @@
             <h2>Konselor Kami</h2>
             <div class="resource-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; padding: 1rem;">
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/KFoP5lo4TqlwC?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQwNTQsImZpbGVTbHVnIjoiS0ZvUDVsbzRUcWx3QyJ9.ojb6iYfRIeh4Q2AfEiIYLwfIngljmx1Y2FaJZJIqalY" alt="Counselor 1" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Counselor1.jpg?raw=true" alt="Counselor 1" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Fiona Valentina Damanik</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/zhmh4KYmyI5UK?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQxNDMsImZpbGVTbHVnIjoiemhtaDRLWW15STVVSyJ9.YILKYs-qdHjI5wjkxdhJ1f0hiUDcCTVIcfC6OonoVRE" alt="Counselor 2" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Counselor2.jpg?raw=true" alt="Counselor 2" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Yanuar Lurisa Aldio</h3>
                     <p style="color: var(--text-secondary);">S.PSI</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/RqQq395SslKP9?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQxNjIsImZpbGVTbHVnIjoiUnFRcTM5NVNzbEtQOSJ9.3rljwB63jRUhNx1h328RRdEhNQcgHeIwdsd7rTlPnaw" alt="Counselor 3" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Counselor%203.jpg?raw=true" alt="Counselor 3" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Ignatia Ria Natalia</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
                 <div class="resource-card" style="text-align: center; background: rgba(255, 255, 255, 0.05); padding: 1.5rem; border-radius: 10px; transition: transform 0.3s ease;">
-                    <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/99LKIKYbZO7g8?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQxNzYsImZpbGVTbHVnIjoiOTlMS0lLWWJaTzdnOCJ9.yEaA8SN64LS0XvXWG8sa4qHIa01HO3J0lWUBBAkZEGY" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Counselor4.jpg?raw=true" alt="Counselor 4" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 1rem; object-fit: cover; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
                     <h3 style="margin-bottom: 0.5rem;">Sonny Tirta Luzanil</h3>
                     <p style="color: var(--text-secondary);">M.PSI., Psikolog</p>
                 </div>
