--- a/html/students/consultation.html
+++ b/html/students/consultation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/rDkKRKxwtou3w?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ1ODAsImZpbGVTbHVnIjoickRrS1JLeHd0b3UzdyJ9.ZeBenB3QbipRgSvH2jnnQre5gWPDNL5E89B_eOUug4w" type="image/png"> 
+    <link rel="icon"  href="https://raw.githubusercontent.com/BakiTacos/image-host/refs/heads/main/StudKudeta/Student%20Support.webp" type="image/png"> 
     <title>Formulir Konsultasi - Student Support UMN</title>
     <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="../../css/booking.css">
