--- a/html/students/studentview.html
+++ b/html/students/studentview.html
@@ -48,7 +48,7 @@
         <div class="container py-9">
             <div class="row mb-4">
                 <div class="col-12 text-center">
-                    <img src="https://i.postimg.cc/9Fsw-9N1L/umn.png" alt="UMN Logo" style="max-height:120px;">
+                    <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Logo%20UMN.png?raw=true" alt="UMN Logo" style="max-height:120px;">
                     <h2 class="mt-3">My Consultation Requests</h2>
                 </div>
             </div>
