--- a/html/admin/UpdateRiwayat.html
+++ b/html/admin/UpdateRiwayat.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 p-3 text-center">
-                <img src="https://k1-cd.cdn.gigachad-cdn.ru/api/file/d/TJM1Fxjsf7bHO?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDc3NTQ2NTAsImZpbGVTbHVnIjoiVEpNMUZ4anNmN2JITyJ9.H5KZhzDK25e7P62TJEKlXdgruyOXoeQ7vtfPw4twGks" style="max-height: 80px;" alt="UMN Logo" class="logo">
+                <img src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Logo%20UMN.png?raw=true" style="max-height: 80px;" alt="UMN Logo" class="logo">
             </div>
         </div>
 
