--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <a href="html/auth/login.html"><img class="d-block w-100" src="images/homeCarousel/Banner1.jpeg" alt="First slide"></a>
+                    <a href="html/auth/login.html"><img class="d-block w-100" src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Banner1.jpeg?raw=true" alt="First slide"></a>
                     <a href="html/auth/login.html" class="btn btn-primary" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%); padding: 10px 20px; font-weight: bold; border-radius: 25px; background-color: #FFFFFF; color: #1b3b6f; text-decoration: none; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">Butuh Bantuan?</a>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/Banner2.webp" alt="Second slide">
+                    <img class="d-block w-100" src="https://raw.githubusercontent.com/BakiTacos/image-host/refs/heads/main/StudKudeta/Banner2.webp" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/Banner3.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Banner3.jpg?raw=true" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <a href="html/auth/login.html"><img class="d-block w-100" src="images/homeCarousel/Banner1.jpeg" alt="Fourth slide"></a>
+                    <a href="html/auth/login.html"><img class="d-block w-100" src="https://github.com/BakiTacos/image-host/blob/main/StudKudeta/Banner1.jpeg?raw=true" alt="Fourth slide"></a>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
