--- a/index.html
+++ b/index.html
@@ -109,6 +109,26 @@
         </div>
     </section>
 
+    <section id="counseling-types" class="services">
+        <div class="container">
+            <h2>Jenis Konseling</h2>
+            <div class="service-grid">
+                <div class="service-card">
+                    <h3>Konseling Individual</h3>
+                    <p>Sesi konseling one-on-one dengan konselor profesional untuk membahas masalah pribadi secara mendalam dan rahasia</p>
+                </div>
+                <div class="service-card">
+                    <h3>Konseling Kelompok</h3>
+                    <p>Sesi konseling dalam kelompok kecil yang dipimpin oleh konselor profesional untuk berbagi pengalaman dan dukungan</p>
+                </div>
+                <div class="service-card">
+                    <h3>Konseling Sebaya</h3>
+                    <p>Layanan konseling yang diberikan oleh mahasiswa terlatih untuk membantu sesama mahasiswa dalam mengatasi tantangan akademik dan sosial</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="resources" class="resources">
         <div class="container">
             <h2>Konselor Kami</h2>
